@@ -32,6 +32,7 @@
 	* fix uTP edge case where udp socket buffer fills up
 	* fix nagle implementation in uTP
 
+	* improve file_storage::map_file when dealing with invalid input
 	* improve handling of invalid utf-8 sequences in strings in torrent files
 	* handle more cases of broken .torrent files
 	* fix bug filename collision resolver
